manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-demo-app
  labels:
    app: prometheus-demo-app
spec:
  type: ClusterIP
  selector:
    app: prometheus-demo-app
  ports:
  - port: 8080
    targetPort: http
    name: web
